GENTBE-1401: Fixed webform progressbar label layout issue when its on 2 lines.

--- a/sass/components/_webform.scss
+++ b/sass/components/_webform.scss
@@ -74,7 +74,7 @@
       text-indent: -9999px;
       @include mq($bp-tablet-m) {
         float: left;
-        width: auto;
+        width: 70%;
         text-align: left;
         visibility: visible;
         text-decoration: none;
